# accessor-hs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Readme.md  accessor-hs.cabal  flake.nix  runagent.sh
src/: Accessor.hs
src/Data/: Accessor.hs
test/: AccessorTest.hs
