cabal-version:      3.0

name:               accessor-hs

version:            0.1.0.0

license:            MIT

license-file:       LICENSE

author:             Mistivia

maintainer:         i@mistivia.com

category:           Data
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:  Data.Accessor
    build-depends:    base

    hs-source-dirs:   src

    default-language: GHC2021

test-suite accessor-hs-test
    import:           warnings
    type: exitcode-stdio-1.0
    main-is: AccessorTest.hs
    default-language: GHC2021
    hs-source-dirs:   test
    build-depends:
        base,
        HUnit,
        accessor-hs
